k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-service
  namespace: default
  labels:
    app: inventory-api
spec:
  selector:
    app: inventory-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
